public/css/FacsEditor.css
#FacsEditor .osd-viewer {
    position: relative;
    padding: 0;
    margin: 0;
    width: 100%;
}

.search-on {
    height: calc( 100vh - 62px);
}

.search-off {
    height: 100vh;
}

#FacsEditor .titlebar {
    background: #0086C0;
    color: white;
    padding: 10px;
    height: 42px;
}

#FacsEditor .titlebar h1 {
    padding-top: 5px;
}

#FacsEditor .toolbar-button-right {
    float: right;
}

#FacsEditor .top-bar {
    position: absolute;
    width: 100%;
    z-index: 800;
    top: 63px;
    border-bottom: 1px solid gray;
    background: white;
}

#FacsEditor .bottom-bar {
    position: absolute;
    z-index: 800;
    bottom: 0px;
    opacity: 0.8;
    padding: 10px;
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 20px;
}

#FacsEditor .editor {
    background: #ccc;
}

